Added function to calculate efficient fronier